--- a/sections/custom-product-section.liquid
+++ b/sections/custom-product-section.liquid
@@ -190,7 +190,7 @@ button.quantity__button {
 }
 </style> 
 
-<h2>Munib </h2>
+<h2>Munib rehman</h2>
 
 <section class="p__product_custom">
     <div class="container">
